--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,60 +25,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "from select import select\n",
     "\n",
+    "class MyNode:\n",
+    "    weight = 0\n",
+    "    lists = []\n",
+    "    numbers = []\n",
+    "\n",
+    "    def __init__(self, weight = 0, lists = [], numbers = []):\n",
+    "        self.weight = weight\n",
+    "        self.lists = lists\n",
+    "        self.numbers = numbers\n",
+    "\n",
+    "    def calculate_weight(self):\n",
+    "        weight = 0\n",
+    "        for inner_list in self.lists:\n",
+    "            for x in inner_list:\n",
+    "                if x in self.numbers:\n",
+    "                    weight+=1\n",
+    "                else:\n",
+    "                    self.numbers.append(x)\n",
+    "        self.weight = weight \n",
+    "    \n",
+    "    def check_sol(self, N):\n",
+    "        sol = True\n",
+    "        for i in range(N):\n",
+    "            if i not in self.numbers:\n",
+    "                sol = False\n",
+    "        return sol        \n",
+    "\n",
+    "def get_min_node(opened_list, N):\n",
+    "    min_weigth = -1\n",
+    "    sel_node = []\n",
+    "    for node in opened_list:\n",
+    "     \n",
+    "        node.calculate_weight()\n",
+    "        if min_weigth == -1 or min_weigth > node.weight:\n",
+    "            min_weigth = node.weight\n",
+    "            sel_node = node   \n",
+    "    return sel_node        \n",
+    "\n",
+    "def get_child(select_nodes, listOfList):\n",
+    "    childs = list()\n",
+    "    for l in listOfList:\n",
+    "        if l not in select_nodes.lists:\n",
+    "            node = MyNode(0, select_nodes.lists)\n",
+    "            node.lists.append(l)\n",
+    "            childs.append(node)    \n",
+    "    return childs       \n",
+    "\n",
     "\n",
     "def UCF(listOfList, N):\n",
-    "    first_node = []\n",
+    "    first_node = MyNode()\n",
     "    opened_list = list()\n",
+    "    closed_list = list()\n",
     "    opened_list.append(first_node)\n",
     "    \n",
     "    while True:\n",
-    "        select_node = get_min_node(opened_list, N)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_min_node(opened_list, N):\n",
-    "    frac = 0 \n",
-    "    for el in opened_list:\n",
-    "        picked = [0]*N\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        select_node = get_min_node(opened_list, N)\n",
+    "        if select_node.check_sol(N):\n",
+    "            print(select_node.lists)\n",
+    "        closed_list.append(select_node)\n",
+    "        new_nodes = get_child(select_node, listOfList)\n",
+    "        for node in new_nodes:\n",
+    "            node.calculate_weight()\n",
+    "\n",
+    "\n",
+    "\n",
     "def main(N):\n",
     "    listOfList = problem(N)\n",
     "    print(listOfList)\n",
     "\n",
     "    UCF(listOfList, N)\n",
-    "    \n"
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4], [0, 5], [2], [1], [2], [0, 5], [6], [2], [4, 5], [1], [4, 6], [2, 3]]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "[[2, 3], [6], [2, 3], [0, 3, 5], [3], [2, 6], [0, 2], [0, 4], [3, 5], [1, 4], [4], [0, 2, 4]]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MyNode' object has no attribute 'calculate_weigth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [74], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [73], line 72\u001b[0m, in \u001b[0;36mmain\u001b[1;34m(N)\u001b[0m\n\u001b[0;32m     69\u001b[0m listOfList \u001b[38;5;241m=\u001b[39m problem(N)\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28mprint\u001b[39m(listOfList)\n\u001b[1;32m---> 72\u001b[0m \u001b[43mUCF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlistOfList\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [73], line 64\u001b[0m, in \u001b[0;36mUCF\u001b[1;34m(listOfList, N)\u001b[0m\n\u001b[0;32m     62\u001b[0m new_nodes \u001b[38;5;241m=\u001b[39m get_child(select_node, listOfList)\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m new_nodes:\n\u001b[1;32m---> 64\u001b[0m     \u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_weigth\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'MyNode' object has no attribute 'calculate_weigth'"
      ]
     }
    ],
@@ -89,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -103,12 +151,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
    }
   }
  },
