--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -90,9 +90,10 @@
     "        if select_node.check_sol(N):\n",
     "            print(select_node.lists)\n",
     "        closed_list.append(select_node)\n",
+    "        opened_list.remove(select_node)\n",
     "        new_nodes = get_child(select_node, listOfList)\n",
     "        for node in new_nodes:\n",
-    "            node.calculate_weight()\n",
+    "           opened_list.append(node) #devrei fare controlle che non ci sia già stata aggiunta questa conbinazione\n",
     "\n",
     "\n",
     "\n",
