--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,16 @@
     "    \n",
     "    def check_sol(self, N):\n",
     "        sol = True\n",
+    "        #print(\"in check\")\n",
+    "        #print(self.lists)\n",
+    "        #print(self.numbers)\n",
     "        for i in range(N):\n",
+    "            #print(i)\n",
     "            if i not in self.numbers:\n",
     "                sol = False\n",
+    "        #print(sol)        \n",
     "        return sol        \n",
+    "      \n",
     "\n",
     "def get_min_node(opened_list, N):\n",
     "    min_weigth = -1\n",
@@ -64,75 +70,242 @@
     "    for node in opened_list:\n",
     "     \n",
     "        node.calculate_weight()\n",
+    "        #print(\"--------\")\n",
+    "        #print(node.weight)\n",
+    "        #print(node.lists)\n",
+    "        #print(node.numbers)\n",
     "        if min_weigth == -1 or min_weigth > node.weight:\n",
     "            min_weigth = node.weight\n",
     "            sel_node = node   \n",
     "    return sel_node        \n",
     "\n",
-    "def get_child(select_nodes, listOfList):\n",
-    "    childs = list()\n",
+    "def get_child(select_nodes, listOfList, opened_list):\n",
     "    for l in listOfList:\n",
     "        if l not in select_nodes.lists:\n",
-    "            node = MyNode(0, select_nodes.lists)\n",
-    "            node.lists.append(l)\n",
-    "            childs.append(node)    \n",
-    "    return childs       \n",
+    "            new_list = list()\n",
+    "            for l2 in select_nodes.lists:\n",
+    "                new_list.append(l2)\n",
+    "            new_list.append(l)    \n",
+    "            node = MyNode(0, new_list, list())\n",
+    "            #node.lists = new_list\n",
+    "            opened_list.append(node) \n",
+    "            #print(\"in child creation\")\n",
+    "            #print(node.lists)\n",
+    "    return opened_list           \n",
+    "          \n",
     "\n",
     "\n",
     "def UCF(listOfList, N):\n",
+    "\n",
     "    first_node = MyNode()\n",
     "    opened_list = list()\n",
     "    closed_list = list()\n",
     "    opened_list.append(first_node)\n",
-    "    \n",
+    "\n",
     "    while True:\n",
     "        select_node = get_min_node(opened_list, N)\n",
+    "        print(\"sel node \", select_node.lists)\n",
     "        if select_node.check_sol(N):\n",
-    "            print(select_node.lists)\n",
+    "            print(\"sol: \", select_node.lists)\n",
+    "            print(\"weight: \", select_node.weight)\n",
+    "            return\n",
     "        closed_list.append(select_node)\n",
     "        opened_list.remove(select_node)\n",
-    "        new_nodes = get_child(select_node, listOfList)\n",
-    "        for node in new_nodes:\n",
-    "           opened_list.append(node) #devrei fare controlle che non ci sia già stata aggiunta questa conbinazione\n",
+    "        opened_list = get_child(select_node, listOfList, opened_list)\n",
+    "        print(\"after child gen ----\")\n",
+    "        for c in opened_list:\n",
+    "            print(c.lists)\n",
+    "        \n",
     "\n",
     "\n",
     "\n",
     "def main(N):\n",
     "    listOfList = problem(N)\n",
     "    print(listOfList)\n",
-    "\n",
+    "    print(\"start UCF\")\n",
     "    UCF(listOfList, N)\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2, 3], [6], [2, 3], [0, 3, 5], [3], [2, 6], [0, 2], [0, 4], [3, 5], [1, 4], [4], [0, 2, 4]]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'MyNode' object has no attribute 'calculate_weigth'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [74], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn [73], line 72\u001b[0m, in \u001b[0;36mmain\u001b[1;34m(N)\u001b[0m\n\u001b[0;32m     69\u001b[0m listOfList \u001b[38;5;241m=\u001b[39m problem(N)\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28mprint\u001b[39m(listOfList)\n\u001b[1;32m---> 72\u001b[0m \u001b[43mUCF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlistOfList\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn [73], line 64\u001b[0m, in \u001b[0;36mUCF\u001b[1;34m(listOfList, N)\u001b[0m\n\u001b[0;32m     62\u001b[0m new_nodes \u001b[38;5;241m=\u001b[39m get_child(select_node, listOfList)\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m new_nodes:\n\u001b[1;32m---> 64\u001b[0m     \u001b[43mnode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_weigth\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'MyNode' object has no attribute 'calculate_weigth'"
+      "[[1, 4], [0, 4], [0], [2], [3], [0], [4], [2, 3], [0, 3], [0]]\n",
+      "start UCF\n",
+      "sel node  []\n",
+      "after child gen ----\n",
+      "[[1, 4]]\n",
+      "after child gen ----\n",
+      "[[0, 4]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[2]]\n",
+      "after child gen ----\n",
+      "[[3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[4]]\n",
+      "after child gen ----\n",
+      "[[2, 3]]\n",
+      "after child gen ----\n",
+      "[[0, 3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "sel node  [[1, 4]]\n",
+      "after child gen ----\n",
+      "[[0, 4]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[2]]\n",
+      "after child gen ----\n",
+      "[[3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[4]]\n",
+      "after child gen ----\n",
+      "[[2, 3]]\n",
+      "after child gen ----\n",
+      "[[0, 3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0, 4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [2]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [2, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "sel node  [[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[0, 4]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[2]]\n",
+      "after child gen ----\n",
+      "[[3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[4]]\n",
+      "after child gen ----\n",
+      "[[2, 3]]\n",
+      "after child gen ----\n",
+      "[[0, 3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0, 4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [2]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [2, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [0, 4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [0, 3]]\n",
+      "sel node  [[1, 4], [0], [2]]\n",
+      "after child gen ----\n",
+      "[[0, 4]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[2]]\n",
+      "after child gen ----\n",
+      "[[3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[4]]\n",
+      "after child gen ----\n",
+      "[[2, 3]]\n",
+      "after child gen ----\n",
+      "[[0, 3]]\n",
+      "after child gen ----\n",
+      "[[0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0, 4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [2]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [2, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [0, 4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [0, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2], [0, 4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2], [3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2], [4]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2], [2, 3]]\n",
+      "after child gen ----\n",
+      "[[1, 4], [0], [2], [0, 3]]\n",
+      "sel node  [[1, 4], [0], [2], [3]]\n",
+      "sol:  [[1, 4], [0], [2], [3]]\n",
+      "weight:  0\n"
      ]
     }
    ],
    "source": [
-    "main(7)"
+    "main(5)"
    ]
   }
  ],
