--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "from select import select\n",
+    "\n",
+    "from zmq import NULL\n",
     "\n",
     "class MyNode:\n",
     "    weight = 0\n",
@@ -53,14 +55,10 @@
     "    \n",
     "    def check_sol(self, N):\n",
     "        sol = True\n",
-    "        #print(\"in check\")\n",
-    "        #print(self.lists)\n",
-    "        #print(self.numbers)\n",
     "        for i in range(N):\n",
-    "            #print(i)\n",
+    "           \n",
     "            if i not in self.numbers:\n",
-    "                sol = False\n",
-    "        #print(sol)        \n",
+    "                sol = False        \n",
     "        return sol        \n",
     "      \n",
     "\n",
@@ -68,12 +66,6 @@
     "    min_weigth = -1\n",
     "    sel_node = []\n",
     "    for node in opened_list:\n",
-    "     \n",
-    "        node.calculate_weight()\n",
-    "        #print(\"--------\")\n",
-    "        #print(node.weight)\n",
-    "        #print(node.lists)\n",
-    "        #print(node.numbers)\n",
     "        if min_weigth == -1 or min_weigth > node.weight:\n",
     "            min_weigth = node.weight\n",
     "            sel_node = node   \n",
@@ -87,10 +79,9 @@
     "                new_list.append(l2)\n",
     "            new_list.append(l)    \n",
     "            node = MyNode(0, new_list, list())\n",
-    "            #node.lists = new_list\n",
+    "            node.calculate_weight()\n",
     "            opened_list.append(node) \n",
-    "            #print(\"in child creation\")\n",
-    "            #print(node.lists)\n",
+    "            \n",
     "    return opened_list           \n",
     "          \n",
     "\n",
@@ -102,9 +93,9 @@
     "    closed_list = list()\n",
     "    opened_list.append(first_node)\n",
     "\n",
+    "    \n",
     "    while True:\n",
     "        select_node = get_min_node(opened_list, N)\n",
-    "        print(\"sel node \", select_node.lists)\n",
     "        if select_node.check_sol(N):\n",
     "            print(\"sol: \", select_node.lists)\n",
     "            print(\"weight: \", select_node.weight)\n",
@@ -112,9 +103,10 @@
     "        closed_list.append(select_node)\n",
     "        opened_list.remove(select_node)\n",
     "        opened_list = get_child(select_node, listOfList, opened_list)\n",
-    "        print(\"after child gen ----\")\n",
-    "        for c in opened_list:\n",
-    "            print(c.lists)\n",
+    "        #print(\"after child gen ----\")\n",
+    "        #for c in opened_list:\n",
+    "        #    print(c.lists)\n",
+    "        #    print(\"weight: \", c.weight)\n",
     "        \n",
     "\n",
     "\n",
@@ -129,183 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 4], [0, 4], [0], [2], [3], [0], [4], [2, 3], [0, 3], [0]]\n",
-      "start UCF\n",
-      "sel node  []\n",
-      "after child gen ----\n",
-      "[[1, 4]]\n",
-      "after child gen ----\n",
-      "[[0, 4]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[2]]\n",
-      "after child gen ----\n",
-      "[[3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[4]]\n",
-      "after child gen ----\n",
-      "[[2, 3]]\n",
-      "after child gen ----\n",
-      "[[0, 3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "sel node  [[1, 4]]\n",
-      "after child gen ----\n",
-      "[[0, 4]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[2]]\n",
-      "after child gen ----\n",
-      "[[3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[4]]\n",
-      "after child gen ----\n",
-      "[[2, 3]]\n",
-      "after child gen ----\n",
-      "[[0, 3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0, 4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [2]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [2, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "sel node  [[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[0, 4]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[2]]\n",
-      "after child gen ----\n",
-      "[[3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[4]]\n",
-      "after child gen ----\n",
-      "[[2, 3]]\n",
-      "after child gen ----\n",
-      "[[0, 3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0, 4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [2]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [2, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [0, 4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [0, 3]]\n",
-      "sel node  [[1, 4], [0], [2]]\n",
-      "after child gen ----\n",
-      "[[0, 4]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[2]]\n",
-      "after child gen ----\n",
-      "[[3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[4]]\n",
-      "after child gen ----\n",
-      "[[2, 3]]\n",
-      "after child gen ----\n",
-      "[[0, 3]]\n",
-      "after child gen ----\n",
-      "[[0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0, 4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [2]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [2, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [0, 4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [0, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2], [0, 4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2], [3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2], [4]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2], [2, 3]]\n",
-      "after child gen ----\n",
-      "[[1, 4], [0], [2], [0, 3]]\n",
-      "sel node  [[1, 4], [0], [2], [3]]\n",
-      "sol:  [[1, 4], [0], [2], [3]]\n",
-      "weight:  0\n"
+      "[[0, 2, 3, 8, 11, 13, 14], [2, 5, 6, 10, 17, 19], [0, 1, 2, 4, 5, 7, 8, 15, 18], [0, 4, 5, 8, 14, 17], [8, 9, 17, 1], [2, 3, 6, 7, 10, 11, 15, 17], [5, 6, 7, 8, 11, 13, 17], [9, 10, 11, 13], [0, 3, 6, 9, 10, 14, 18], [0, 2, 4, 6, 13, 14, 17, 19], [1, 7, 8, 12, 14, 15, 17], [3, 5, 8, 11, 15, 16, 19], [1, 5, 7, 11, 13, 17, 19], [0, 1, 3, 5, 6, 7, 9, 12, 18], [0, 11, 13, 15, 18], [1, 3, 4, 5, 7, 10, 13, 14, 15], [3, 6, 8, 9, 11, 15, 18, 19], [0, 1, 9, 11, 12, 18], [4, 8, 10, 11, 15, 17, 18], [8, 12, 5, 7], [8, 9, 18], [8, 17, 3, 12], [2, 4, 8, 9, 12, 17], [4, 7, 8, 11, 13, 19], [1, 2, 5, 8, 9, 19], [3, 5, 6, 12, 17], [1, 3, 7, 8, 10, 13, 18, 19], [0, 9, 2, 3], [0, 7, 8, 10, 11, 14], [0, 10, 13, 16, 18], [0, 1, 3, 4, 6, 7, 8, 10, 17], [2, 8, 9, 10, 12, 14, 17], [16, 1, 19, 12], [1, 3, 8, 10, 11, 16, 17], [2, 4, 9, 15, 16, 17], [0, 3, 5, 8, 11, 12, 14, 15, 19], [3, 5, 6, 13, 18], [2, 5, 7, 8, 9, 12, 16, 19], [0, 6, 12, 13, 15, 16, 17, 18], [1, 3, 5, 7, 8, 15], [2, 4, 6, 12, 13, 14, 19], [16, 9, 4, 12], [0, 3, 6, 9, 15, 17, 19], [3, 5, 8, 10, 17, 18, 19], [3, 7, 12, 14, 15, 17, 18], [8, 10, 4], [3, 5, 8, 16, 19], [2, 11, 14, 15, 17, 18], [16, 11, 6, 7], [0, 4, 5, 8, 9, 10, 11, 15, 16, 18], [0, 4, 6, 8, 9, 13, 14, 15, 18, 19], [1, 2, 11, 12, 15], [8, 9, 10, 12, 14, 18, 19], [0, 1, 3, 4, 11, 12, 16], [2, 3, 9, 12, 16, 17], [0, 5, 6, 8, 9, 12], [6, 10, 11, 15, 16, 18], [2, 5, 7, 8, 9, 10, 17, 18], [2, 5, 7, 11, 13, 16], [1, 3, 5, 9, 10, 11, 15, 17], [1, 2, 8, 14, 15], [4, 5, 7], [0, 1, 18, 6], [2, 3, 6, 7, 8, 11, 15], [16, 0, 18, 14], [1, 2, 10, 13, 14, 16], [1, 4, 6, 7, 10, 11, 17], [0, 14, 15, 17, 18], [9, 4, 14, 7], [3, 5, 6, 12, 14, 16], [16, 1, 4], [3, 4, 5, 11, 12, 14, 15], [7, 8, 9, 13, 14], [0, 6, 10, 11, 14, 19], [0, 3, 5, 15, 16, 18], [1, 2, 6, 8, 10, 13, 17, 18, 19], [0, 2, 3, 4, 10, 14, 15, 19], [1, 2, 4, 5, 7, 8, 9, 17], [1, 4, 5, 8, 9, 13], [9, 19, 6, 7], [0, 6, 8, 10, 12, 14, 16, 19], [0, 2, 6, 11, 13, 15, 16, 18], [3, 4, 5, 6, 7, 8, 9, 13, 17], [4, 6, 14, 15, 17], [5, 11, 12, 15, 16], [16, 0, 11, 5], [1, 5, 7, 8, 9, 11, 19], [4, 5, 9, 12, 16, 17], [1, 3, 5, 8, 11, 15, 17, 19], [1, 4, 5, 6, 13, 15, 17, 19], [1, 5, 9, 12, 13, 15, 16, 17, 18], [3, 18, 19, 6], [2, 3, 6, 15], [2, 6, 7, 9, 10, 12, 19], [0, 2, 4, 6, 7, 10, 13, 16, 17, 18], [3, 7, 9, 13, 17], [0, 1, 7, 8, 9, 11, 16, 19], [1, 4, 5, 6, 7, 12, 14, 17], [2, 19, 14, 6], [2, 3, 9, 11, 13]]\n",
+      "start UCF\n"
      ]
     }
    ],
    "source": [
-    "main(5)"
+    "main(20)"
    ]
   }
  ],
