--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,64 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 2, 3, 8, 11, 13, 14], [2, 5, 6, 10, 17, 19], [0, 1, 2, 4, 5, 7, 8, 15, 18], [0, 4, 5, 8, 14, 17], [8, 9, 17, 1], [2, 3, 6, 7, 10, 11, 15, 17], [5, 6, 7, 8, 11, 13, 17], [9, 10, 11, 13], [0, 3, 6, 9, 10, 14, 18], [0, 2, 4, 6, 13, 14, 17, 19], [1, 7, 8, 12, 14, 15, 17], [3, 5, 8, 11, 15, 16, 19], [1, 5, 7, 11, 13, 17, 19], [0, 1, 3, 5, 6, 7, 9, 12, 18], [0, 11, 13, 15, 18], [1, 3, 4, 5, 7, 10, 13, 14, 15], [3, 6, 8, 9, 11, 15, 18, 19], [0, 1, 9, 11, 12, 18], [4, 8, 10, 11, 15, 17, 18], [8, 12, 5, 7], [8, 9, 18], [8, 17, 3, 12], [2, 4, 8, 9, 12, 17], [4, 7, 8, 11, 13, 19], [1, 2, 5, 8, 9, 19], [3, 5, 6, 12, 17], [1, 3, 7, 8, 10, 13, 18, 19], [0, 9, 2, 3], [0, 7, 8, 10, 11, 14], [0, 10, 13, 16, 18], [0, 1, 3, 4, 6, 7, 8, 10, 17], [2, 8, 9, 10, 12, 14, 17], [16, 1, 19, 12], [1, 3, 8, 10, 11, 16, 17], [2, 4, 9, 15, 16, 17], [0, 3, 5, 8, 11, 12, 14, 15, 19], [3, 5, 6, 13, 18], [2, 5, 7, 8, 9, 12, 16, 19], [0, 6, 12, 13, 15, 16, 17, 18], [1, 3, 5, 7, 8, 15], [2, 4, 6, 12, 13, 14, 19], [16, 9, 4, 12], [0, 3, 6, 9, 15, 17, 19], [3, 5, 8, 10, 17, 18, 19], [3, 7, 12, 14, 15, 17, 18], [8, 10, 4], [3, 5, 8, 16, 19], [2, 11, 14, 15, 17, 18], [16, 11, 6, 7], [0, 4, 5, 8, 9, 10, 11, 15, 16, 18], [0, 4, 6, 8, 9, 13, 14, 15, 18, 19], [1, 2, 11, 12, 15], [8, 9, 10, 12, 14, 18, 19], [0, 1, 3, 4, 11, 12, 16], [2, 3, 9, 12, 16, 17], [0, 5, 6, 8, 9, 12], [6, 10, 11, 15, 16, 18], [2, 5, 7, 8, 9, 10, 17, 18], [2, 5, 7, 11, 13, 16], [1, 3, 5, 9, 10, 11, 15, 17], [1, 2, 8, 14, 15], [4, 5, 7], [0, 1, 18, 6], [2, 3, 6, 7, 8, 11, 15], [16, 0, 18, 14], [1, 2, 10, 13, 14, 16], [1, 4, 6, 7, 10, 11, 17], [0, 14, 15, 17, 18], [9, 4, 14, 7], [3, 5, 6, 12, 14, 16], [16, 1, 4], [3, 4, 5, 11, 12, 14, 15], [7, 8, 9, 13, 14], [0, 6, 10, 11, 14, 19], [0, 3, 5, 15, 16, 18], [1, 2, 6, 8, 10, 13, 17, 18, 19], [0, 2, 3, 4, 10, 14, 15, 19], [1, 2, 4, 5, 7, 8, 9, 17], [1, 4, 5, 8, 9, 13], [9, 19, 6, 7], [0, 6, 8, 10, 12, 14, 16, 19], [0, 2, 6, 11, 13, 15, 16, 18], [3, 4, 5, 6, 7, 8, 9, 13, 17], [4, 6, 14, 15, 17], [5, 11, 12, 15, 16], [16, 0, 11, 5], [1, 5, 7, 8, 9, 11, 19], [4, 5, 9, 12, 16, 17], [1, 3, 5, 8, 11, 15, 17, 19], [1, 4, 5, 6, 13, 15, 17, 19], [1, 5, 9, 12, 13, 15, 16, 17, 18], [3, 18, 19, 6], [2, 3, 6, 15], [2, 6, 7, 9, 10, 12, 19], [0, 2, 4, 6, 7, 10, 13, 16, 17, 18], [3, 7, 9, 13, 17], [0, 1, 7, 8, 9, 11, 16, 19], [1, 4, 5, 6, 7, 12, 14, 17], [2, 19, 14, 6], [2, 3, 9, 11, 13]]\n",
+      "[[0, 1, 4], [4], [1, 3], [1, 4], [2, 3, 5], [0, 4], [6], [0], [1, 2, 5]]\n",
       "start UCF\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 3378, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Local\\Temp\\ipykernel_12392\\626987483.py\", line 1, in <module>\n",
-      "    main(20)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Local\\Temp\\ipykernel_12392\\3819410779.py\", line 91, in main\n",
-      "    UCF(listOfList, N)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Local\\Temp\\ipykernel_12392\\3819410779.py\", line 71, in UCF\n",
-      "    select_node = get_min_node(opened_list, N)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Local\\Temp\\ipykernel_12392\\3819410779.py\", line -1, in get_min_node\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 1997, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1112, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 1006, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 859, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 812, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\ultratb.py\", line 730, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\stack_data\\core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "  File \"C:\\Users\\Enrico\\AppData\\Roaming\\Python\\Python310\\site-packages\\executing\\executing.py\", line 168, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "sol:  [[0, 1, 4], [2, 3, 5], [6]]\n",
+      "weight:  0\n"
      ]
     }
    ],
