--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +91,14 @@
     "    closed_list = list()\n",
     "    opened_list.append(first_node)\n",
     "\n",
-    "    \n",
+    "    num_visited_nodes = 0\n",
     "    while True:\n",
     "        select_node = get_min_node(opened_list, N)\n",
+    "        num_visited_nodes+=1\n",
     "        if select_node.check_sol(N):\n",
     "            print(\"sol: \", select_node.lists)\n",
     "            print(\"weight: \", select_node.weight)\n",
+    "            print(\"number of nodes visited: \", num_visited_nodes)\n",
     "            return\n",
     "        closed_list.append(select_node)\n",
     "        opened_list.remove(select_node)\n",
@@ -119,22 +121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1, 4], [4], [1, 3], [1, 4], [2, 3, 5], [0, 4], [6], [0], [1, 2, 5]]\n",
+      "[[1], [0, 1], [2], [4], [0, 3], [2, 3], [3, 4], [0], [0, 2], [3], [1], [0, 4], [1]]\n",
       "start UCF\n",
-      "sol:  [[0, 1, 4], [2, 3, 5], [6]]\n",
-      "weight:  0\n"
+      "sol:  [[1], [2, 3], [0, 4]]\n",
+      "weight:  0\n",
+      "number of nodes visited:  131\n"
      ]
     }
    ],
    "source": [
-    "main(7)"
+    "main(5)"
    ]
   }
  ],
