--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def problem(N, seed=None):\n",
+    "def problem(N, seed=42):\n",
     "    random.seed(seed)\n",
     "    return [\n",
     "        list(set(random.randint(0, N - 1) for n in range(random.randint(N // 5, N // 2))))\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,29 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1], [0, 1], [2], [4], [0, 3], [2, 3], [3, 4], [0], [0, 2], [3], [1], [0, 4], [1]]\n",
+      "[[0, 4], [1, 2, 3], [9, 6], [0, 1], [8, 9, 3], [8, 3], [0, 3, 4, 7, 9], [4, 5, 6], [1, 3, 5], [1, 6], [0, 9, 4, 5], [8, 1, 6], [9, 3, 5], [0, 3], [1, 3, 6], [2, 5, 7], [1, 3, 4, 9], [8, 2, 3], [3, 4, 5, 6, 8], [0, 3], [1, 3, 4, 6], [3, 6, 7], [2, 3, 4], [9, 6], [8, 2, 3, 7], [0, 1], [9, 2, 6], [6], [8, 0, 4, 1], [1, 4, 5, 6], [0, 4, 7], [8, 1, 4], [2, 5], [9, 5], [0, 1, 3, 4, 5], [9, 3], [1, 7], [8, 2], [8, 2, 7], [8, 9, 3, 6], [4, 5, 6], [8, 1, 3, 7], [0, 5], [0, 9, 3], [0, 3], [0, 5], [8, 3], [8, 2, 3, 7], [1, 3, 6, 7], [5, 6]]\n",
       "start UCF\n",
-      "sol:  [[1], [2, 3], [0, 4]]\n",
+      "sol:  [[9, 6], [0, 1, 3, 4, 5], [8, 2, 7]]\n",
       "weight:  0\n",
-      "number of nodes visited:  131\n"
+      "number of nodes visited:  1337\n"
      ]
     }
    ],
    "source": [
-    "main(5)"
+    "main(20)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -157,12 +157,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
