--- a/lab3/lab3_1.ipynb
+++ b/lab3/lab3_1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Nim:\n",
-    "    def __init__(self, num_rows: int, k: int = None) -> None:\n",
+    "    def __init__(self, num_rows: int, k: int = None) -> None: #k is the max number of object that can be removed from a line\n",
     "        self._rows = [i * 2 + 1 for i in range(num_rows)]\n",
     "        self._k = k\n",
     "\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,18 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimal_startegy(state: Nim) -> Nimply:\n",
+    "def optimal_strategy(state: Nim) -> Nimply:\n",
     "    data = cook_status(state)\n",
     "    return next((bf for bf in data[\"brute_force\"] if bf[1] == 0), random.choice(data[\"brute_force\"]))[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def enrico(state: Nim) -> Nimply: #my strategy\n",
+    "    data = cook_status(state)\n",
+    "    if data[\"active_rows_number\"] == 0:\n",
+    "        return (data[\"longest_row\"], state._rows[data[\"longest_row\"]])\n",
+    "    else:\n",
+    "        return (data[\"shortest_row\"], state._rows[data[\"shortest_row\"]])     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +194,7 @@
     "\n",
     "\n",
     "def evaluate(strategy: Callable) -> float:\n",
-    "    opponent = (strategy, optimal_startegy)\n",
+    "    opponent = (strategy, optimal_strategy)\n",
     "    won = 0\n",
     "\n",
     "    for m in range(NUM_MATCHES):\n",
@@ -197,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -206,13 +220,13 @@
        "0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate(make_strategy({\"p\": 0.9999}))"
+    "evaluate(enrico) "
    ]
   },
   {
@@ -224,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -232,31 +246,39 @@
      "output_type": "stream",
      "text": [
       "DEBUG:root:status: Initial board  -> <1 3 5 7 9 11 13 15 17 19 21>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 5 7 9 11 13 15 17 19 2>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 5 7 2 11 13 15 17 19 2>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 5 7 2 11 13 15 17 18 2>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 5 7 2 1 13 15 17 18 2>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 5 7 2 1 13 15 17 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 5 7 2 1 13 15 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 5 7 2 1 13 15 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 2 5 7 2 1 13 15 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 2 5 7 2 1 13 0 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 2 5 7 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 2 5 6 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 2 4 6 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 2 4 5 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 1 4 5 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 4 5 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 4 4 2 1 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 4 4 2 0 2 0 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 4 4 2 0 2 0 0 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 4 4 1 0 2 0 0 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 4 4 1 0 1 0 0 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 4 1 0 1 0 0 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 1 0 1 0 0 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 1 0 1 0 0 0 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 1 0 1 0 0 0 0>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 1 0 0 0 0>\n",
+      "DEBUG:root:status: After player 0 -> <1 3 5 7 9 11 13 15 17 19 6>\n",
+      "DEBUG:root:status: After player 1 -> <1 3 1 7 9 11 13 15 17 19 6>\n",
+      "DEBUG:root:status: After player 0 -> <1 3 1 7 9 11 13 15 17 15 6>\n",
+      "DEBUG:root:status: After player 1 -> <1 3 1 7 9 11 13 15 13 15 6>\n",
+      "DEBUG:root:status: After player 0 -> <1 3 1 7 9 11 13 6 13 15 6>\n",
+      "DEBUG:root:status: After player 1 -> <1 3 1 7 0 11 13 6 13 15 6>\n",
+      "DEBUG:root:status: After player 0 -> <1 3 1 7 0 11 13 6 13 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <1 3 1 7 0 6 13 6 13 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <1 3 1 7 0 6 8 6 13 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <1 3 1 2 0 6 8 6 13 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <1 3 1 2 0 6 8 6 12 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <0 3 1 2 0 6 8 6 12 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <0 3 1 2 0 6 8 6 10 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <0 3 1 2 0 0 8 6 10 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <0 3 1 2 0 0 8 6 5 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <0 3 1 2 0 0 7 6 5 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <0 3 1 2 0 0 4 6 5 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 1 2 0 0 4 6 5 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 1 2 0 0 4 0 5 2 6>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 1 2 0 0 2 0 5 2 6>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 1 2 0 0 2 0 5 2 5>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 1 1 0 0 2 0 5 2 5>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 1 1 0 0 2 0 2 2 5>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 1 1 0 0 2 0 2 2 2>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 1 1 0 0 1 0 2 2 2>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 1 1 0 0 1 0 1 2 2>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 0 1 0 0 1 0 1 2 2>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 1 0 1 2 2>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 1 0 1 1 2>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 1 0 1 1 1>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 0 0 1 1 1>\n",
+      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 0 0 0 1 1>\n",
+      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 0 0 0 0 1>\n",
       "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 0 0 0 0 0>\n",
       "INFO:root:status: Player 1 won!\n"
      ]
@@ -282,7 +304,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 ('ci22-dPIXJ0_o-py3.10')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -296,11 +318,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "10197e8e2f2aa67e2c349105091c77f4cd384fce4877865f002d9ec653f96bc0"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
