--- a/lab3/lab3_2.ipynb
+++ b/lab3/lab3_2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "POPULATION_SIZE = 200\n",
+    "OFFSPRING_SIZE = 50\n",
+    "N = 50\n",
+    "OPPONENT = enrico"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,12 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hard_coded_strategy(state: Nim, aggressive, pref_long, remove_perc) -> Nimply:\n",
+    "def hard_coded_strategy(state: Nim, genome) -> Nimply:\n",
     "    data = cook_status(state)\n",
+    "    aggressive, pref_long, remove_perc = genome\n",
     "    if data[\"active_rows_number\"] == 1: #win conditions\n",
     "        return (data[\"longest_row\"], state._rows[data[\"longest_row\"]])\n",
     "        \n",
@@ -196,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +237,9 @@
     "NIM_SIZE = 10\n",
     "\n",
     "\n",
-    "def evaluate(opponent: Callable) -> float:\n",
+    "def evaluate(opponent: Callable, genome) -> float:\n",
     "    won = 0\n",
-    "\n",
+    "    \n",
     "    for m in range(NUM_MATCHES):\n",
     "        nim = Nim(NIM_SIZE)\n",
     "        player = random.randint(0,1)\n",
@@ -234,7 +247,7 @@
     "            if player == 0:\n",
     "                ply = opponent(nim)\n",
     "            else:\n",
-    "                ply = hard_coded_strategy(nim, 0.8, 1, 1)\n",
+    "                ply = hard_coded_strategy(nim, genome)\n",
     "            nim.nimming(ply)\n",
     "            player = 1 - player\n",
     "        if player == 0:\n",
@@ -244,63 +257,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6"
+       "0.4"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluate(enrico) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Oversimplified match"
+    "evaluate(enrico, (0.5,0.5,0.5)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fitness(genome): # calcolate the fisness\n",
+    "    return evaluate(OPPONENT, genome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generatePopulation(): #return population, one individual is a tuple of a mask array of the list taken and his fitness\n",
+    "    population = list()\n",
+    "    for genome in range(POPULATION_SIZE):\n",
+    "        genome = (random.random(), random.random(), random.random())\n",
+    "        population.append((genome, fitness(genome)))\n",
+    "    return population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutation(g):\n",
+    "\n",
+    "    point = random.randint(0,len(g)-1)\n",
+    "    return g[:point] + (random.random()) + g[point+1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_parent(population, tornament_size=10):\n",
+    "    return max(random.choices(population, k=tornament_size), key=lambda i: i[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GA():\n",
+    "    best_sol = None \n",
+    "    best_sol_fit = None\n",
+    "    \n",
+    "    population = generatePopulation()\n",
+    "    for generation in range(100):\n",
+    "        offsprings = list()\n",
+    "        for i in range(OFFSPRING_SIZE):\n",
+    "            o = ()\n",
+    "            p = select_parent(population)\n",
+    "            o = mutation(p[0])\n",
+    "            offsprings.append((o, fitness(o)))\n",
+    "        population = population + offsprings   \n",
+    "        population = sorted(population, key=lambda i:i[1], reverse=True)[:POPULATION_SIZE]\n",
+    "            \n",
+    "    best_sol = population[0][0]\n",
+    "    best_sol_fit = population[0][1]\n",
+    "    print(\"after 100 generations\")\n",
+    "    print(\"best solution:\")\n",
+    "    print(best_sol)\n",
+    "    print(best_sol_fit)\n",
+    "    return best_sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'optimal_startegy' is not defined",
+     "evalue": "name 'p' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [368], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m logging\u001b[39m.\u001b[39mgetLogger()\u001b[39m.\u001b[39msetLevel(logging\u001b[39m.\u001b[39mDEBUG)\n\u001b[1;32m----> 3\u001b[0m strategy \u001b[39m=\u001b[39m (make_strategy({\u001b[39m\"\u001b[39m\u001b[39mp\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m0.1\u001b[39m}), optimal_startegy)\n\u001b[0;32m      5\u001b[0m nim \u001b[39m=\u001b[39m Nim(\u001b[39m11\u001b[39m)\n\u001b[0;32m      6\u001b[0m logging\u001b[39m.\u001b[39mdebug(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mstatus: Initial board  -> \u001b[39m\u001b[39m{\u001b[39;00mnim\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'optimal_startegy' is not defined"
+      "Cell \u001b[1;32mIn [416], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m best_sol\u001b[39m=\u001b[39m GA()\n\u001b[0;32m      2\u001b[0m evaluate(gabriele, best_sol)\n",
+      "Cell \u001b[1;32mIn [415], line 10\u001b[0m, in \u001b[0;36mGA\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(OFFSPRING_SIZE):\n\u001b[0;32m      9\u001b[0m     o \u001b[39m=\u001b[39m ()\n\u001b[1;32m---> 10\u001b[0m     o \u001b[39m=\u001b[39m mutation(p[\u001b[39m0\u001b[39m])\n\u001b[0;32m     11\u001b[0m     offsprings\u001b[39m.\u001b[39mappend((o, fitness(o)))\n\u001b[0;32m     12\u001b[0m population \u001b[39m=\u001b[39m population \u001b[39m+\u001b[39m offsprings   \n",
+      "\u001b[1;31mNameError\u001b[0m: name 'p' is not defined"
      ]
     }
    ],
    "source": [
-    "logging.getLogger().setLevel(logging.DEBUG)\n",
-    "\n",
-    "strategy = (make_strategy({\"p\": 0.1}), optimal_startegy)\n",
-    "\n",
-    "nim = Nim(11)\n",
-    "logging.debug(f\"status: Initial board  -> {nim}\")\n",
-    "player = 0\n",
-    "while nim:\n",
-    "    ply = strategy[player](nim)\n",
-    "    nim.nimming(ply)\n",
-    "    logging.debug(f\"status: After player {player} -> {nim}\")\n",
-    "    player = 1 - player\n",
-    "winner = 1 - player\n",
-    "logging.info(f\"status: Player {winner} won!\")"
+    "best_sol= GA()\n",
+    "evaluate(gabriele, best_sol)"
    ]
   }
  ],
