task2 vfinal no read me

--- a/lab3/lab3_2.ipynb
+++ b/lab3/lab3_2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 400,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "POPULATION_SIZE = 200\n",
-    "OFFSPRING_SIZE = 50\n",
-    "N = 50\n",
-    "OPPONENT = enrico"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,10 +227,11 @@
     "\n",
     "def evaluate(opponent: Callable, genome) -> float:\n",
     "    won = 0\n",
-    "    \n",
+    "    last_player_start = 1\n",
     "    for m in range(NUM_MATCHES):\n",
     "        nim = Nim(NIM_SIZE)\n",
-    "        player = random.randint(0,1)\n",
+    "        player = 1 - last_player_start\n",
+    "        last_player_start = player\n",
     "        while nim:\n",
     "            if player == 0:\n",
     "                ply = opponent(nim)\n",
@@ -252,21 +241,22 @@
     "            player = 1 - player\n",
     "        if player == 0:\n",
     "            won += 1\n",
+    "\n",
     "    return won / NUM_MATCHES #percentage of match won agaist the opponent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4"
+       "0.8"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "POPULATION_SIZE = 20\n",
+    "OFFSPRING_SIZE = 10\n",
+    "OPPONENT = gabriele"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,19 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mutation(g):\n",
     "\n",
     "    point = random.randint(0,len(g)-1)\n",
-    "    return g[:point] + (random.random()) + g[point+1:]"
+    "    return g[:point] + (random.random(),) + g[point+1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +333,7 @@
     "    best_sol_fit = None\n",
     "    \n",
     "    population = generatePopulation()\n",
-    "    for generation in range(100):\n",
+    "    for generation in range(10):\n",
     "        offsprings = list()\n",
     "        for i in range(OFFSPRING_SIZE):\n",
     "            o = ()\n",
@@ -353,20 +354,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'p' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [416], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m best_sol\u001b[39m=\u001b[39m GA()\n\u001b[0;32m      2\u001b[0m evaluate(gabriele, best_sol)\n",
-      "Cell \u001b[1;32mIn [415], line 10\u001b[0m, in \u001b[0;36mGA\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(OFFSPRING_SIZE):\n\u001b[0;32m      9\u001b[0m     o \u001b[39m=\u001b[39m ()\n\u001b[1;32m---> 10\u001b[0m     o \u001b[39m=\u001b[39m mutation(p[\u001b[39m0\u001b[39m])\n\u001b[0;32m     11\u001b[0m     offsprings\u001b[39m.\u001b[39mappend((o, fitness(o)))\n\u001b[0;32m     12\u001b[0m population \u001b[39m=\u001b[39m population \u001b[39m+\u001b[39m offsprings   \n",
-      "\u001b[1;31mNameError\u001b[0m: name 'p' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "after 100 generations\n",
+      "best solution:\n",
+      "(0.1579461860987983, 0.06349456409784537, 0.08973543738499212)\n",
+      "1.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
