--- a/lab3/lab3_1.ipynb
+++ b/lab3/lab3_1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "0.0"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,49 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:status: Initial board  -> <1 3 5 7 9 11 13 15 17 19 21>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 5 7 9 11 13 15 17 19 6>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 1 7 9 11 13 15 17 19 6>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 1 7 9 11 13 15 17 15 6>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 1 7 9 11 13 15 13 15 6>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 1 7 9 11 13 6 13 15 6>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 1 7 0 11 13 6 13 15 6>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 1 7 0 11 13 6 13 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 1 7 0 6 13 6 13 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 1 7 0 6 8 6 13 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <1 3 1 2 0 6 8 6 13 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <1 3 1 2 0 6 8 6 12 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <0 3 1 2 0 6 8 6 12 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 1 2 0 6 8 6 10 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <0 3 1 2 0 0 8 6 10 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 1 2 0 0 8 6 5 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <0 3 1 2 0 0 7 6 5 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <0 3 1 2 0 0 4 6 5 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 1 2 0 0 4 6 5 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 1 2 0 0 4 0 5 2 6>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 1 2 0 0 2 0 5 2 6>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 1 2 0 0 2 0 5 2 5>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 1 1 0 0 2 0 5 2 5>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 1 1 0 0 2 0 2 2 5>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 1 1 0 0 2 0 2 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 1 1 0 0 1 0 2 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 1 1 0 0 1 0 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 1 0 0 1 0 1 2 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 1 0 1 2 2>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 1 0 1 1 2>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 1 0 1 1 1>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 0 0 1 1 1>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 0 0 0 1 1>\n",
-      "DEBUG:root:status: After player 0 -> <0 0 0 0 0 0 0 0 0 0 1>\n",
-      "DEBUG:root:status: After player 1 -> <0 0 0 0 0 0 0 0 0 0 0>\n",
-      "INFO:root:status: Player 1 won!\n"
+     "ename": "NameError",
+     "evalue": "name 'optimal_startegy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m logging\u001b[39m.\u001b[39mgetLogger()\u001b[39m.\u001b[39msetLevel(logging\u001b[39m.\u001b[39mDEBUG)\n\u001b[1;32m----> 3\u001b[0m strategy \u001b[39m=\u001b[39m (make_strategy({\u001b[39m\"\u001b[39m\u001b[39mp\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m0.1\u001b[39m}), optimal_startegy)\n\u001b[0;32m      5\u001b[0m nim \u001b[39m=\u001b[39m Nim(\u001b[39m11\u001b[39m)\n\u001b[0;32m      6\u001b[0m logging\u001b[39m.\u001b[39mdebug(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mstatus: Initial board  -> \u001b[39m\u001b[39m{\u001b[39;00mnim\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'optimal_startegy' is not defined"
      ]
     }
    ],
