--- a/lab3/lab3_4.ipynb
+++ b/lab3/lab3_4.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>"
+    "<h1>agent using reinforcement learning</h1>"
    ]
   },
   {
